<resources>
    <string name="app_name">SchoolApp</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="save">SAVE</string>


    <string name="column_studentDetails">StudentDetails</string>
    <string name="rollNo">Roll_No</string>
    <string name="name">Name</string>
    <string name="dob">DOB</string>
    <string name="address">Address</string>
    <string name="parent_MobNo">Parent_Mobile_Number</string>
    <string name="std">Standard</string>
    <string name="div">Division</string>


    <string name="column_attendanceDetails">Attendance_Details</string>
    <string name="date1">Date</string>
    <string name="attendance">Attendance</string>


    <string name="column_parentDetails">ParentDetails</string>
    <string name="P_Name">Name</string>
    <string name="P_address">Address</string>
    <string name="P_MobNo">Mobile_Number</string>

    <string-array name="announcement_type">
        <item>Activity/Homework</item>
        <item>Holiday Annoucement</item>
        <item>Important Notice</item>
        <item>Exam Annoucement</item>
    </string-array>

    <string-array name="standard">
        <item>Select Standard</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="division">
        <item>Select Division</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
    </string-array>

    <string name="column_teacherDetails">TeacherDetails</string>
    <string name="t_no">T_No</string>
    <string name="t_name">T_Name</string>
    <string name="t_std">Standard</string>
    <string name="t_div">Division</string>
    <string name="t_subject">Subject</string>
    <string name="school_features">New Horizon Public School and Penguin Kids, a temple of learning and an abode of strong foundation was established on 21st June 2007. The school has grown from a students’ strength of 1350 to more than 5000 students now. The school is driven by the motto, “Education to Excel”, which enables our students to achieve greater heights, through various avenues. We believe that every child studying in our school is a masterpiece and we empower our teachers to tap their both linear and lateral strengths into polished talents.</string>

    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading…</string>
    <string name="try_me">Try me!</string>
    <string name="create_notification">Create Notification</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="student_info">Student Information</string>
    <string name="select_standard">Select Standard</string>
    <string name="select_division">Select Division</string>
    <string name="annoucement_type">Annoucement Type</string>
    <string name="enter_message">Enter Message</string>
    <string name="send_notification">Send Notification</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_no">Mobile No</string>
    <string name="standard">Standard</string>
    <string name="division">Division</string>
    <string name="roll_no">Roll No</string>
    <string name="school_features1">School Features :</string>
    <string name="about_school">About School</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="teacher_no">Teacher No</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="subject">Subject</string>
    <string name="time_table">Time Table</string>
    <string name="time">Time</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="attendence_report">Attendence Report</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string-array name="names">
        <item>@string/smile_rating_terrible</item>
        <item>@string/smile_rating_bad</item>
        <item>@string/smile_rating_okay</item>
        <item>@string/smile_rating_good</item>
        <item>@string/smile_rating_great</item>
    </string-array>
    <string name="smile_rating_terrible">Terrible</string>
    <string name="smile_rating_bad">Bad</string>
    <string name="smile_rating_okay">Okay</string>
    <string name="smile_rating_good">Good</string>
    <string name="smile_rating_great">Great</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>
