<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mark_attendance"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="8">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/_5sdp"
            android:text="@string/roll_no"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/_5sdp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textStyle="bold" />


        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/_5sdp"
            android:text="@string/mobile_no"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/_5sdp"
            android:text="@string/standard"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/_5sdp"
            android:text="@string/division"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/_5sdp"
            android:text="@string/date1"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingTop="@dimen/_5sdp"
            android:text="@string/mark_attendance"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_student1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>