<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="@dimen/_10sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.android.sudesi.schoolapp.CustomView.Customtextviews
                android:id="@+id/attendence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_weight="1.9"
                android:gravity="center_horizontal"
                android:text="@string/attendence_report"
                android:textColor="@color/warning_stroke_color"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <ImageButton
                android:id="@+id/logoutBtn"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_weight="0.1"
                android:background="@drawable/logoutimg" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_border"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/buttonlayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:height="@dimen/_60sdp"
                android:background="@drawable/topbar"
                android:gravity="left|top"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/prevMonth"
                    android:layout_width="20sp"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10sp"
                    android:clickable="false"
                    android:src="@drawable/calendar_left_arrow_selector"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/currentMonth"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFFFF" />

                <ImageView
                    android:id="@+id/nextMonth"
                    android:layout_width="20sp"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10sp"
                    android:clickable="false"
                    android:src="@drawable/calendar_right_arrow_selector"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/addEvent"
                    android:layout_width="@dimen/_54sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/plus"
                    android:visibility="gone" />

            </LinearLayout>

            <Button
                android:id="@+id/selectedDayMonthYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/calendar_top_header"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:visibility="gone" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60sp"
                android:height="60sp"
                android:gravity="left|top"
                android:background="@color/background1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:gravity="center"
                    android:text="@string/sun"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.14"
                    android:gravity="center"
                    android:text="@string/mon"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.14"
                    android:gravity="center"
                    android:text="@string/tue"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.14"
                    android:gravity="center"
                    android:text="@string/wed"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.14"
                    android:gravity="center"
                    android:text="@string/thu"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.14"
                    android:gravity="center"
                    android:text="@string/fri"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:gravity="center"
                    android:text="@string/sat"
                    android:textColor="@color/black" />
            </LinearLayout>

            <GridView
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="7" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>