<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/logo" />

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="@dimen/_225sdp"
        android:layout_height="@dimen/_250sdp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:background="#2fa881" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_50sdp"
                    android:text="@string/login"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/_30sdp"
                android:paddingStart="@dimen/_50sdp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/Username"
                        android:inputType="textPersonName"
                        android:paddingBottom="@dimen/_2sdp"
                        android:textColor="@color/white"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="@dimen/_11sdp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/_30sdp"
                android:paddingStart="@dimen/_50sdp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/Password"
                        android:inputType="textPassword"
                        android:paddingBottom="@dimen/_2sdp"
                        android:textColor="@color/white"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="@dimen/_11sdp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center">

                <Button
                    android:id="@+id/bt_go"
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/button_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/go"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/forgot_your_password"
                android:textColor="@color/white"
                android:textSize="@dimen/_8sdp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <!--<ImageView
        android:layout_below="@+id/cv"
        android:layout_width="@dimen/_100sdp"
        android:layout_centerInParent="true"
        android:layout_height="@dimen/_60sdp"
        android:background="@drawable/school"/-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/cv"
        android:layout_alignTop="@id/cv"
        android:layout_marginEnd="-20dp"
        android:layout_marginTop="@dimen/_25sdp"
        android:src="@drawable/plus"
        android:transitionName="loginFab"
        app:fabSize="normal" />

</RelativeLayout>
